--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,33 +16,38 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-
+        android:name="android.support.multidex.MultiDexApplication"
         android:theme="@style/AppTheme"
+
         >
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat" /> <!-- optional (needed if default theme has no action bar) -->
-        <activity android:name=".controller.MainActivity" />
-        <activity android:name=".controller.LoginActivity" />
+            android:theme="@style/Base.Theme.AppCompat"
+            android:screenOrientation="portrait"/> <!-- optional (needed if default theme has no action bar) -->
+        <activity android:name=".controller.MainActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".controller.LoginActivity"
+            android:screenOrientation="portrait"/>
         <activity
+            android:noHistory="true"
             android:name=".controller.ExitActivity"
             android:theme="@style/SplashTheme" />
-        <activity android:name=".controller.RegisterActivity" />
-        <activity android:name=".controller.GetStartedActivity"></activity>
-        <activity android:name=".controller.MyEventActivity">
+        <activity android:name=".controller.RegisterActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".controller.GetStartedActivity" android:screenOrientation="portrait"  ></activity>
+        <activity android:name=".controller.MyEventActivity" android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".controller.MainActivity" />
         </activity>
-        <activity android:name=".controller.EditProfileActivity" />
-        <activity android:name=".controller.SplashActivity">
+        <activity android:name=".controller.EditProfileActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".controller.SplashActivity" android:screenOrientation="portrait" android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".controller.FavoritesActivity"></activity>
+        <activity android:name=".controller.FavoritesActivity" android:screenOrientation="portrait"></activity>
     </application>
 
 </manifest>
